plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id 'java'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    maven {
        url = uri('https://papermc.io/repo/repository/maven-public/')
    }
}

dependencies {
    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
}

group = 'me.tibinonest.plugins'
version = '1.0.0-alpha2'
description = 'Current Time'

shadowJar {
    archiveClassifier.set('')
}

tasks.withType(JavaCompile).configureEach {

    it.options.encoding = "UTF-8"

    def targetVersion = 8
    if (JavaVersion.current().isJava9Compatible()) {
        it.options.release = targetVersion
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from(sourceSets.main.resources.srcDirs) {
        expand (
                'pluginVersion': project.version
        )
        include 'plugin.yml'
    }
}
